Dodaję projekty z zajęć z programowania obiektowego z III semestru studiów

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,9 @@ FakesAssemblies/
 
 # Visual Studio 6 workspace options file
 *.opt
+
+# Moje zmiany do Visuala
+
+*/Debug
+*/*.vcxproj
+*/*.filters
